# rag-mvp-base_1

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run.py
config/: .env.example
src/company_rag/: __init__.py
src/company_rag/config/: __init__.py  default.yaml  settings.py
src/company_rag/embeddings/: __init__.py  base.py  bge_embedding.py
src/company_rag/generation/: __init__.py  base.py  prompt_templates.py  response_builder.py
src/company_rag/ingestion/: __init__.py  base.py  earnings_releases.py  news_releases.py  pdf_files.py  sec_filings.py  website.py
src/company_rag/llm/: base.py  groq_llm.py  ollama_llm.py  openai_llm.py
src/company_rag/pipeline/: __init__.py  base.py  dedup.py  orchestrator.py
src/company_rag/preprocessing/: __init__.py  base.py  chunking.py  cleaning.py  metadata.py
src/company_rag/retrieval/: base.py  reranker.py  vector_retriever.py
src/company_rag/vectorstore/: base.py  chroma_store.py
